RESOLVED FIXED Bug 151948
Modern IDB: Fix "old versions" when upgrading databases
https://bugs.webkit.org/show_bug.cgi?id=151948
Summary Modern IDB: Fix "old versions" when upgrading databases
Brady Eidson
Reported 2015-12-07 10:44:22 PST
Modern IDB: Fix "old versions" when upgrading databases This includes the old version on the IDBVersionChangeEvent, as well as the version the database is left with if the version change transaction is aborted.
Attachments
Patch v1 (17.03 KB, patch)
2015-12-07 10:48 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-12-07 10:48:34 PST
Created attachment 266787 [details] Patch v1
WebKit Commit Bot
Comment 2 2015-12-07 12:27:55 PST
Comment on attachment 266787 [details] Patch v1 Clearing flags on attachment: 266787 Committed r193643: <http://trac.webkit.org/changeset/193643>
WebKit Commit Bot
Comment 3 2015-12-07 12:27:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.